# sistemas_en_tiempo_real

./: README.md  prueba
ADC_config/: CMakeLists.txt  README.md
ADC_config/main/: CMakeLists.txt  oneshot_read_main.c  pendiente.txt
app_control_temperature/: CMakeLists.txt
app_control_temperature/main/: CMakeLists.txt  oneshot_read_main.c
app_control_temperature/main/ADC_library/include/: ADC_library.h
app_control_temperature/main/ADC_library/src/: ADC_library.c
app_control_temperature/main/NTC_library/src/: NTC_library.c
app_control_temperature/main/command_library/include/: command_library.h
app_control_temperature/main/command_library/src/: command_library.c
app_control_temperature/main/led_RGB_LIBRARY/include/: led_RGB_library.h
app_control_temperature/main/led_RGB_LIBRARY/src/: led_RGB_library.c
app_control_temperature/main/server_library/include/: server_library.h
app_control_temperature/main/server_library/src/: server_library.c
app_control_temperature/main/uart_library/include/: uart_library.h
app_control_temperature/main/webpage/: index.html  script.js  styles.css
app_control_temperature/main/wifi_library/include/: wifi_library.h
app_control_temperature/main/wifi_library/src/: wifi_library.c
blink/: README.md  sdkconfig
blink/main/: blink_example_main.c
clase_20-nov/example_input/: sdkconfig.old
led_RGB/: CMakeLists.txt  README.md
led_RGB/main/: CMakeLists.txt  (+1 more)
temp_ntc_rgb_uart/: CMakeLists.txt
toggle/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
uart_ntc_adc_rgb/: CMakeLists.txt  sdkconfig  sdkconfig.old
uart_ntc_adc_rgb/main/: CMakeLists.txt  oneshot_read_main.c  test.txt
uart_ntc_adc_rgb/main/ADC_library/src/: ADC_library.c
uart_ntc_adc_rgb/main/NTC_library/include/: NTC_library.h
uart_ntc_adc_rgb/main/uart_library/src/: uart_library.c
wifi_mode_APSTA/: CMakeLists.txt
(+17 files in other folders)
