idf_component_register(SRCS "oneshot_read_main.c" 
                            "NTC_library/src/NTC_library.c" 
                            "ADC_library/src/ADC_library.c"
                            "led_RGB_LIBRARY/src/led_RGB_library.c"
                            "uart_library/src/uart_library.c"
                            "command_library/src/command_library.c"
                            "wifi_library/src/wifi_library.c"
                            "server_library/src/server_library.c"
                    INCLUDE_DIRS    "NTC_library/include" 
                                    "ADC_library/include"
                                    "led_RGB_LIBRARY/include"
                                    "uart_library/include" 
                                    "command_library/include"
                                    "wifi_library/include"
                                    "server_library/include"
                    EMBED_FILES "webpage/index.html" "webpage/script.js" "webpage/styles.css")